Fix body overflow and hero heading size

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@ body {
     font-family: "Work Sans", sans-serif;
     color: $clr-grey-4;
     background-color: $clr-grey-1;
+    overflow-x: hidden;
 }
 
 .primary {
