--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -46,7 +46,7 @@
 
 @media (max-width: 700px) {
     h1 {
-        font-size: 6.4rem;
+        font-size: calc(16vw - 1rem);
     }
     h2 {
         font-size: 4.8rem;
